# gmlx

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: release.yml  test.yml
bench/: README.md  example.json  merge.py  plot-bench.py  serve-bench.py
bench/patches/: ds4-ignore-eos.patch
docs/: README.md  adding-architectures.md  arch-coverage.md  assistant.md  benchmarks.json  benchmarks.md  cli.md  getting-started.md  launch.md  lora.md  migrating.md  performance.md  python.md  rag.md  server-config.md  serving-architecture.md  streaming.md  talk.md  testing.md  troubleshooting.md  upstream-upgrades.md  vlm.md
docs/assets/: demo.tape
docs/assets/perf/: lossy-hy3-baseline.html  lossy-hy3-shed-0.07-0.93.html  lossy-hy3-shed-0.10-0.90-cool.html  lossy-hy3-shed-0.10-0.90.html  lossy-hy3-shed-0.20-0.80.html
gmlx/: __init__.py  __main__.py  adapter.py  apc_pooling.py  arch_table.py  assistant_brain.py  assistant_serve.py  attn_hd512.py  benchmarks.py  cache_compat.py  cache_snapshot.py  chat.py  cli.py  completion.py  config.py  config_synth.py  decode_feeder.py  deepseek_v4_cache.py  deepseek_v4_hyper_connection.py  deepseek_v4_model.py  deepseek_v4_mtp.py  diffusion.py  discovery.py  doctor.py  drafter_protocol.py  dsv32_patches.py  embeddings.py  envflags.py  extras.py  feeder.py  feeder_common.py  gdn_patches.py  generation.py  gguf_meta.py  gpt_oss_prefill.py  gpu_token.py  headerscan.py  hf_cache.py  hotkey.py  hy_v3_model.py  (+64 more)
gmlx/_vendor/: __init__.py
gmlx/server_patches/: __init__.py  _common.py  apc.py  api_contract.py  chat_behavior.py  completions.py  hardening.py  observability.py  request_flow.py  routes.py  sampling.py
licenses/: ds4.c-LICENSE  llama.cpp-LICENSE  mlx-lm-LICENSE  mlx-vlm-LICENSE  omlx-LICENSE
scripts/: check-coverage.py  upstream_canary.sh
tests/: conftest.py  test_adapter.py  test_adapter_save.py  test_apc_pooling.py  test_apc_store_eval.py  test_api_contract.py  test_arch_gate.py  test_ascii_hygiene.py  test_assistant_brain.py  test_assistant_serve.py  test_attn_hd512_verify.py  test_batch_parity.py  test_bench_prompt_source.py  test_cache_snapshot.py  test_chat.py  test_chat_assistant.py  test_chat_e2e.py  test_chat_pty.py  test_chat_sessions.py  test_ckpt_tier.py  test_cli_config_model.py  test_cli_consistency.py  test_cli_run_flags.py  test_cli_umbrella.py  test_cli_validation.py  test_cmd_profiles.py  test_completion.py  test_completions_route.py  test_config.py  test_config_synth.py  test_decode_feeder.py  test_deepseek_v4_indexer_quant.py  test_deepseek_v4_kv_quant.py  test_deepseek_v4_mtp.py  test_deepseek_v4_qat.py  test_deepseek_v4_score_profile.py  test_diffusion_gemma.py  test_discovery.py  test_docs_config.py  test_docs_python.py  (+88 more)
tests/e2e/: README.md  checks.py  client.py  judge.py  models.py  prompts.py  pty_session.py  report.py  run_apc_disk_e2e.py  run_chat_pty_e2e.py  run_lora_e2e.py  run_server_e2e.py  scenarios.py  server_proc.py
tests/e2e/assets/: README.md
